--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
                 </div>
                 <div class="card">
                     <img src="images/user-experience.svg">
-                    <h2 class="card__header">Experienced players</h2>
-                   <span class="card__description">We have plenty of experienced players who will help you get better at the game!</span></div>
+                    <h2 class="card__header">Only experienced players</h2>
+                   <span class="card__description">We help eachother to get better and better at small-scale, sharing between eachother tips and advices</span></div>
                 </div>
 
                 <div class="about-content">
