clean-up, fix project structure

--- a/index.html
+++ b/index.html
@@ -104,19 +104,19 @@
                 <div 
                   class="banner__container discord"
                   id="banner-btn"
-                  onclick="copyToClipboard('URLtoDiscordHERE')">
+                  onclick="copyToClipboard('cerber#6046')">
                     <button 
                       class="banner__btn"
                       id="discord-btn"
                     >
-                        <img src="images/Discord-Logo-Color.svg" id="discord-logo"/>
+                        <img src="images/icons/Discord-Logo-Color.svg" id="discord-logo"/>
                         <span>Discord</span>
                     </button>
                     <button 
                       class="banner__btn--copied"
                       id="copied-btn"
                     >
-                        <img src="images/white-heart.svg" id="like-icon"/>
+                        <img src="images/icons/white-heart.svg" id="like-icon"/>
                         <span>Copied!</span>
                     </button>
                 </div>
@@ -129,27 +129,30 @@
             <div class="about-wrapper">
 
                 <div class="card">
-                    <img src="images/war.svg">
-                    <h2 class="card__header">Guaranteed content</h2>
-                    <span class="card__description">Non-mandatory small-scale/ava roads everyday!</span>
+                    <img src="images/icons/war.svg">
+                    <h2 class="card__header">Only PVP Content</h2>
+                    <span class="card__description">Small-scale, HG 2v2/5v5, fractions, avalonian roads</span>
                 </div>
                 <div class="card">    
-                     <img src="images/heart-smile.svg">
+                     <img src="images/icons/heart-smile.svg">
                      <h2 class="card__header">Tryhard but chill atmosphere</h2>
                     <span class="card__description">You will find a lot of friends here as long as you are not a pussy</span>
                 </div>
                 <div class="card">
-                    <img src="images/user-experience.svg">
+                    <img src="images/icons/user-experience.svg">
                     <h2 class="card__header">Only experienced players</h2>
-                   <span class="card__description">We help eachother to get better and better at small-scale, sharing between eachother tips and advices</span></div>
+                   <span class="card__description">We help eachother to get better and better at our main content</span></div>
                 </div>
 
                 <div class="about-content">
                     <h1 class="headline">About</h1>
-                    <p class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus maiores aspernatur aut voluptatem molestias 
-                        quam atque corporis ducimus dolore ipsam vitae beatae illo, nemo sint, hic magni tenetur eveniet veniam recusandae nostrum! Autem,
-                         temporibus error consectetur illum quisquam alias sed officiis corrupti! Enim impedit expedita quibusdam perferendis commodi 
-                         at minus, inventore tempore culpa quis, molestias molestiae aspernatur sit nihil iusto?</p>
+                    <p class="description">The guild Thomas and Friends 
+                        has been created at 13.06.2021 and like a train
+                        we drive around avalonian roads, open-world and HGs
+                        looking for content and enemies who want to get run over by us.
+                        The only train which will not stop his ride until it will get 
+                        what it wants. 
+                    </p>
                          <iframe
                            class="about__video" 
                            width="560" 
@@ -168,7 +171,7 @@
 
                <div class="crew-leader">
                    <h2 class="crew-rank">Leader</h2>
-                   <img class="crew-avatar" src="images/leader-avatar.png" />
+                   <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                    <span class="crew-name">AgatkaNaFecie</span>
                    <span class="crew-description">Fucked up junkie trash with burnt out brain. Hes too lazy to do anything in life so he decided to become pro 
                        caller in albion online. He used to main swords and frosts but it turned out too hard to play so he switched to mace. Yes, mace. Fuck mace
@@ -178,7 +181,7 @@
 
                <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png"  />
                 <span class="crew-name">Kolbek</span>
                 <span class="crew-description"> 
                     Main roles: Tank and Healer which he's really good at.
@@ -187,7 +190,7 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">MaciusG</span>
                 <span class="crew-description">
                     Main role: Fire.
@@ -196,16 +199,16 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">ColdOneCherry</span>
                 <span class="crew-description">
-                    Main role: Carving.
+                    One of the greatest Three Musketers, master of sword and virtuoso of swordsmanship.
                 </span>
             </div>
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/goteii-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/goteii-avatar.png" />
                 <span class="crew-name">Goteii</span>
                 <span class="crew-description">
                     Main role: Dagger/Crossbow.
@@ -214,7 +217,7 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">Zargix</span>
                 <span class="crew-description">
                     The best small-scale healer. Zargix has second shade - becomes very aggressive and selfish while carrying cursed staff.
@@ -223,7 +226,7 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">Ozijar</span>
                 <span class="crew-description">
                     Retired old man. 
@@ -232,7 +235,7 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">Kazaron</span>
                 <span class="crew-description">
                     AgatkaNaFecie's pupil. There is a story that Agatka gave him drugs and Kazaron got wiped off the planet for 2 days. He doesn't act in normal way
@@ -242,16 +245,16 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">Kambudza</span>
                 <span class="crew-description">
-                    Main role: Healer.
+                    A man which jumped into ZvZ fire having only 2kk of total fame to become a good healer.
                 </span>
             </div>
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
                 <span class="crew-name">Afera24</span>
                 <span class="crew-description">
                     Main role: Axe.
