fixes and adjustments

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <img 
           class="navbar__logo"
           src="./images/thomas-logo.png"
-          onclick="moveToSection()"
+          onclick="moveToSection('top')"
         />
       <ul class="navbar__list">
           <li>
@@ -62,7 +62,7 @@
         <img 
           class="navbar__logo"
           src="./images/thomas-logo.png"
-          onclick="moveToSection()"
+          onclick="moveToSection('top')"
         />
 
           <div class="menu-btn" onclick="handleMobileNav()">
@@ -181,7 +181,7 @@
 
                <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png"  />
+                <img class="crew-avatar" src="images/crew-avatars/kolbek-avatar.png"  />
                 <span class="crew-name">Kolbek</span>
                 <span class="crew-description"> 
                     Main roles: Tank and Healer which he's really good at.
@@ -190,10 +190,10 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/maciusg-avatar.png" />
                 <span class="crew-name">MaciusG</span>
                 <span class="crew-description">
-                    Main role: Fire.
+                    The most toxic and retarded guy from the whole crew. He has to do a backflip.
                 </span>
             </div>
 
@@ -211,7 +211,7 @@
                 <img class="crew-avatar" src="images/crew-avatars/goteii-avatar.png" />
                 <span class="crew-name">Goteii</span>
                 <span class="crew-description">
-                    Main role: Dagger/Crossbow.
+                    Snake.
                 </span>
             </div>
 
@@ -245,7 +245,7 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
+                <img class="crew-avatar" src="images/crew-avatars/kambudza-avatar.png" />
                 <span class="crew-name">Kambudza</span>
                 <span class="crew-description">
                     A man which jumped into ZvZ fire having only 2kk of total fame to become a good healer.
