--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div 
                   class="banner__container discord"
                   id="banner-btn"
-                  onclick="copyToClipboard('cerber#6046')">
+                  onclick="copyToClipboard('discord.gg/XnfbzsRTTK')">
                     <button 
                       class="banner__btn"
                       id="discord-btn"
