update crew members, adjust mobile version

--- a/index.html
+++ b/index.html
@@ -242,11 +242,10 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/crew-avatars/kazaron-avatar.png" />
-                <span class="crew-name">Kazaron</span>
+                <img class="crew-avatar" src="images/crew-avatars/yourichis-avatar.png" />
+                <span class="crew-name">Yourichis</span>
                 <span class="crew-description">
-                    AgatkaNaFecie's pupil. There is a story that Agatka gave him drugs and Kazaron got wiped off the planet for 2 days. He doesn't act in normal way
-                    since then..
+                    Bankrupt millionaire from albion who's the only purpose in life is murdering people on roads.
                 </span>
             </div>
 
@@ -265,6 +264,33 @@
                 <span class="crew-name">Afera24</span>
                 <span class="crew-description">
                     Main role: Axe.
+                </span>
+            </div>
+
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
+                <span class="crew-name">StaryTrzmiel</span>
+                <span class="crew-description">
+                    Silent impostor who might fall asleep in the middle of content.
+                </span>
+            </div>
+
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
+                <span class="crew-name">Parkiz</span>
+                <span class="crew-description">
+                    One man army - a healer, a dps and a tank at the same time.
+                </span>
+            </div>
+
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/leader-avatar.png" />
+                <span class="crew-name">Murzyn24</span>
+                <span class="crew-description">
+                    Spinning axe does WRRRRRRRUUMM.
                 </span>
             </div>
 
