add new video part

--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
           class="video-container">
             <h1 class="headline">Videos</h1>
             <div class="video-wrapper">
+
                 <div class="video" id="ava_1">
                     <div class="video-overlay"
                     onclick="showLightbox('ava_1', 'Avalonian Roads Pt. 1')"></div>
@@ -316,6 +317,7 @@
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
+
                 <div class="video" id="ava_2">
                     <div class="video-overlay"
                     onclick="showLightbox('ava_2', 'Avalonian Roads Pt. 2')"></div>
@@ -327,6 +329,21 @@
                       width="100%" 
                       height="80%" 
                       src="https://www.youtube.com/embed/gkSCuxi31No"
+                      frameborder="0" 
+                      allowfullscreen></iframe>
+                </div>
+
+                <div class="video" id="ava_3">
+                    <div class="video-overlay"
+                    onclick="showLightbox('ava_3', 'Avalonian Roads Pt. 3')"></div>
+                    <div class="video__description">Avalonian Roads Pt. 3</div>
+                    <iframe
+                      class="about__video" 
+                      id="ava_3"
+                      title="Avalonian Roads Pt. 3"
+                      width="100%" 
+                      height="80%" 
+                      src="https://www.youtube.com/embed/UNI-ySJkwGI"
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
