--- a/index.html
+++ b/index.html
@@ -313,11 +313,11 @@
                       title="Avalonian Roads Pt. 1"
                       width="100%" 
                       height="80%" 
-                      src="https://www.youtube.com/embed/8FewO8dPcd0"
+                      src="https://www.youtube.com/embed/G7-LHU4OCpY"
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
-
+                
                 <div class="video" id="ava_2">
                     <div class="video-overlay"
                     onclick="showLightbox('ava_2', 'Avalonian Roads Pt. 2')"></div>
@@ -328,11 +328,11 @@
                       title="Avalonian Roads Pt. 2"
                       width="100%" 
                       height="80%" 
-                      src="https://www.youtube.com/embed/gkSCuxi31No"
+                      src="https://www.youtube.com/embed/gjS2aMsxP8c"
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
-
+                
                 <div class="video" id="ava_3">
                     <div class="video-overlay"
                     onclick="showLightbox('ava_3', 'Avalonian Roads Pt. 3')"></div>
