improve mobile-friendly version

--- a/index.html
+++ b/index.html
@@ -161,9 +161,16 @@
                         what it wants. 
                     </p>
                          <iframe
-                           class="about__video" 
+                           class="about__video"
+                           id="about__video-desktop" 
                            width="830" 
                            height="440" 
+                           src="https://www.youtube.com/embed/gkSCuxi31No"
+                           frameborder="0" 
+                           allowfullscreen></iframe>
+                         <iframe
+                           class="about__video"
+                           id="about__video-mobile"
                            src="https://www.youtube.com/embed/gkSCuxi31No"
                            frameborder="0" 
                            allowfullscreen></iframe>
