add grim to the crew

--- a/index.html
+++ b/index.html
@@ -301,6 +301,15 @@
                 </span>
             </div>
 
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/grim-avatar.png" />
+                <span class="crew-name">9Gr1m</span>
+                <span class="crew-description">
+                    Egyptian pharaoh who got possesed by Anubis and wields only cursed staffs.
+                </span>
+            </div>
+
           </div>
         </section>
         
