add mucha to the crew

--- a/index.html
+++ b/index.html
@@ -310,6 +310,16 @@
                 </span>
             </div>
 
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/mucha-avatar.png" />
+                <span class="crew-name">vMucha</span>
+                <span class="crew-description">
+                    Albionsian prince who can buy out the royal continent, regear all people and still sleep on money. 
+                    Plays everything he wants and doesn't go below 1.5k ip.
+                </span>
+            </div>
+
           </div>
         </section>
         
