--- a/index.html
+++ b/index.html
@@ -240,15 +240,6 @@
 
             <div class="crew-member">
                 <h2 class="crew-rank">Member</h2>
-                <img class="crew-avatar" src="images/crew-avatars/ozijar-avatar.png" />
-                <span class="crew-name">Ozijar</span>
-                <span class="crew-description">
-                    Retired old man. 
-                </span>
-            </div>
-
-            <div class="crew-member">
-                <h2 class="crew-rank">Member</h2>
                 <img class="crew-avatar" src="images/crew-avatars/yourichis-avatar.png" />
                 <span class="crew-name">Yourichis</span>
                 <span class="crew-description">
@@ -320,6 +311,24 @@
                 </span>
             </div>
 
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/berte-avatar.png" />
+                <span class="crew-name">xBeerte</span>
+                <span class="crew-description">
+                    Ice wizard.
+                </span>
+            </div>
+
+            <div class="crew-member">
+                <h2 class="crew-rank">Member</h2>
+                <img class="crew-avatar" src="images/crew-avatars/dziks-avatar.png" />
+                <span class="crew-name">Dziks</span>
+                <span class="crew-description">
+                    Our cryptoboar, who started his journey with investments in albion market and makes big cash off of crypto now.
+                </span>
+            </div>
+            
           </div>
         </section>
         
