--- a/index.html
+++ b/index.html
@@ -382,6 +382,21 @@
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
+
+                <div class="video" id="ava_4">
+                    <div class="video-overlay"
+                    onclick="showLightbox('ava_4', 'Avalonian Roads Pt. 4')"></div>
+                    <div class="video__description">Avalonian Roads Pt. 4</div>
+                    <iframe
+                      class="about__video" 
+                      id="ava_4"
+                      title="Avalonian Roads Pt. 4"
+                      width="100%" 
+                      height="80%" 
+                      src="https://www.youtube.com/embed/tgjCflKKSIA"
+                      frameborder="0" 
+                      allowfullscreen></iframe>
+                </div>
             </div>
 
         </section>
