--- a/index.html
+++ b/index.html
@@ -397,6 +397,21 @@
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
+
+                <div class="video" id="ava_5">
+                    <div class="video-overlay"
+                    onclick="showLightbox('ava_5', 'Avalonian Roads Pt. 5')"></div>
+                    <div class="video__description">Avalonian Roads Pt. 5</div>
+                    <iframe
+                      class="about__video" 
+                      id="ava_5"
+                      title="Avalonian Roads Pt. 5"
+                      width="100%" 
+                      height="80%" 
+                      src="https://www.youtube.com/embed/a7AIzfEvweQ"
+                      frameborder="0" 
+                      allowfullscreen></iframe>
+                </div>
             </div>
 
         </section>
