add ava roads 6

--- a/index.html
+++ b/index.html
@@ -412,6 +412,21 @@
                       frameborder="0" 
                       allowfullscreen></iframe>
                 </div>
+
+                <div class="video" id="ava_6">
+                    <div class="video-overlay"
+                    onclick="showLightbox('ava_6', 'Avalonian Roads Pt. 6')"></div>
+                    <div class="video__description">Avalonian Roads Pt. 6</div>
+                    <iframe
+                      class="about__video" 
+                      id="ava_6"
+                      title="Avalonian Roads Pt. 6"
+                      width="100%" 
+                      height="80%" 
+                      src="https://www.youtube.com/embed/g1MntpSitNU"
+                      frameborder="0" 
+                      allowfullscreen></iframe>
+                </div>
             </div>
 
         </section>
