add hardcoded data for results in check-the-ava-road tool, add assets

--- a/index.html
+++ b/index.html
@@ -59,6 +59,15 @@
                 <span>Videos</span>
             </span>
         </li>
+          <li style="display: none">
+            <a
+              class="navbar__link"
+              id="tool-link"
+              href="./pages/checkTheAvaRoad.html"
+              >
+                <span>CheckTheAvaRoad Tool</span>
+          </a>
+        </li>
       </ul>
       </div>
     </nav>
